force-app/main/default/objects/Case_Notification__e/Case_Notification__e.object-meta.xml
<CustomObject>
    <label>Case Notification</label>
    <pluralLabel>Case Notifications</pluralLabel>
</CustomObject>