force-app/main/default/objects/Case_Notification__e/fields/IsFirst__c.field-meta.xml
<CustomField>
    <fullName>IsFirst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFirst</label>
    <type>Checkbox</type>
</CustomField>