force-app/main/default/objects/Case_Notification__e/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>